Add functionality for Leaderboard and pause option
Created the leaderboards and tried connecting all the necessary information to be displayed in the boards, lvl n-1, last level you passed will be recorded along with the amount of deaths.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-/target/
+target/
 *.class
 *.jar
 *.war
 *.ear
 
-/.idea/
+.idea/
 *.iml
-/.vscode/
+
+.vscode/
 .classpath
 .project
 .settings/
-/out/
+
+out/
 /*.iml
 
 .DS_Store
